// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Table Stories multipleRowsshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex flex-col"
    >
      <div
        class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
      >
        <div
          class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
        >
          <div
            class="overflow-hidden border-b border-gray-200 shadow sm:rounded"
          >
            <table
              class="min-w-full "
            >
              <thead>
                <tr>
                  <th
                    class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                  >
                    Name
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                  >
                    Number
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                  >
                    Updated at
                  </th>
                </tr>
              </thead>
              <tbody
                class="bg-white divide-y divide-gray-200"
              >
                <tr>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    Andreas Thomas
                  </td>
                  <td
                    class="px-6 py-4 whitespace-no-wrap"
                  >
                    <span
                      class="inline-flex px-2 text-xs font-semibold leading-5 rounded-full text-purple-800 bg-purple-200"
                    >
                      123456789
                    </span>
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    22.09.2020
                  </td>
                </tr>
                <tr>
                  <td
                    class="px-6 py-4"
                  >
                    <span
                      class="text-sm leading-5 text-gray-900"
                    >
                      Nico Webersinke
                    </span>
                    <p
                      class="text-sm leading-5 text-gray-500"
                    >
                      Product lead
                    </p>
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    123456789
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    22.09.2020
                  </td>
                </tr>
                <tr>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    Mads Jordt
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    123456789
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    22.09.2020
                  </td>
                </tr>
                <tr>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    Kevin Kohler
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    123456789
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    22.09.2020
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Table Stories onDarkshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="p-10 bg-gray-900"
    >
      <div
        class="flex flex-col"
      >
        <div
          class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
        >
          <div
            class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
          >
            <div
              class="overflow-hidden border-b border-gray-200 shadow sm:rounded"
            >
              <table
                class="min-w-full "
              >
                <thead>
                  <tr>
                    <th
                      class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                    >
                      Name
                    </th>
                    <th
                      class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                    >
                      Number
                    </th>
                    <th
                      class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                    >
                      Updated at
                    </th>
                  </tr>
                </thead>
                <tbody
                  class="bg-white divide-y divide-gray-200"
                >
                  <tr>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      Andreas Thomas
                    </td>
                    <td
                      class="px-6 py-4 whitespace-no-wrap"
                    >
                      <span
                        class="inline-flex px-2 text-xs font-semibold leading-5 rounded-full text-purple-800 bg-purple-200"
                      >
                        123456789
                      </span>
                    </td>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      22.09.2020
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="px-6 py-4"
                    >
                      <span
                        class="text-sm leading-5 text-gray-900"
                      >
                        Nico Webersinke
                      </span>
                      <p
                        class="text-sm leading-5 text-gray-500"
                      >
                        Product lead
                      </p>
                    </td>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      123456789
                    </td>
                    <td
                      class="px-6 py-4 whitespace-no-wrap"
                    >
                      <div
                        class="flex-shrink-0 w-10 h-10"
                      >
                        <div
                          class="p-2 rounded-full text-red-800 bg-red-200"
                        >
                          <span>
                            <svg
                              class="w-full"
                              fill="none"
                              stroke="currentColor"
                              viewBox="0 0 24 24"
                              xmlns="http://www.w3.org/2000/svg"
                            >
                              <path
                                d="M7 16a4 4 0 01-.88-7.903A5 5 0 1115.9 6L16 6a5 5 0 011 9.9M15 13l-3-3m0 0l-3 3m3-3v12"
                                stroke-linecap="round"
                                stroke-linejoin="round"
                                stroke-width="2"
                              />
                            </svg>
                          </span>
                        </div>
                      </div>
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      Mads Jordt
                    </td>
                    <td
                      class="px-6 py-4"
                    >
                      <span
                        class="text-sm leading-5 text-gray-900"
                      >
                        Lorem
                      </span>
                      <p
                        class="text-sm leading-5 text-gray-500"
                      >
                        Lorem ipsum dolor sit amet, consectetur adipiscing elit.
                      </p>
                    </td>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      22.09.2020
                    </td>
                  </tr>
                  <tr>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      Kevin Kohler
                    </td>
                    <td
                      class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                    >
                      123456789
                    </td>
                    <td
                      class="px-6 py-4 text-sm font-medium leading-5 whitespace-no-wrap"
                    >
                      <button
                        class="text-indigo-600 hover:text-indigo-900"
                      >
                        Click me
                      </button>
                    </td>
                  </tr>
                </tbody>
              </table>
            </div>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`Table Stories singleRowshould match snapshot 1`] = `
<body>
  <div>
    <div
      class="flex flex-col"
    >
      <div
        class="-my-2 overflow-x-auto sm:-mx-6 lg:-mx-8"
      >
        <div
          class="inline-block min-w-full py-2 align-middle sm:px-6 lg:px-8"
        >
          <div
            class="overflow-hidden border-b border-gray-200 shadow sm:rounded"
          >
            <table
              class="min-w-full "
            >
              <thead>
                <tr>
                  <th
                    class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                  >
                    Name
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                  >
                    Number
                  </th>
                  <th
                    class="px-6 py-4 text-xs font-medium leading-4 tracking-wider text-left text-gray-700 uppercase bg-gray-100"
                  >
                    Updated at
                  </th>
                </tr>
              </thead>
              <tbody
                class="bg-white divide-y divide-gray-200"
              >
                <tr>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    Andreas Thomas
                  </td>
                  <td
                    class="px-6 py-4 whitespace-no-wrap"
                  >
                    <span
                      class="inline-flex px-2 text-xs font-semibold leading-5 rounded-full text-purple-800 bg-purple-200"
                    >
                      123456789
                    </span>
                  </td>
                  <td
                    class="px-6 py-4 text-sm leading-5 text-gray-900 whitespace-no-wrap"
                  >
                    22.09.2020
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
      </div>
    </div>
  </div>
</body>
`;
